--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, synchronize, reopened]
   push:
     branches:
-      - '**'
+      - "**"
 
 permissions:
   id-token: write
@@ -13,7 +13,7 @@ permissions:
   pull-requests: write
 
 env:
-  AWS_REGION: 'ap-northeast-1'
+  AWS_REGION: "ap-northeast-1"
 
 jobs:
   analyze:
@@ -33,8 +33,8 @@ jobs:
       - name: Run Bedrock Analysis
         uses: severity1/custom-amazon-bedrock-agent-action@v0.10.0
         with:
-          agent_id: 'HG3FHKX9GY'
-          agent_alias_id: 'Y7IXOPEHZ2'
+          agent_id: "HG3FHKX9GY"
+          agent_alias_id: "Y7IXOPEHZ2"
           # memory_id: 'terraform-expert-memory' # Titan Models are not supported.
           action_prompt: |
             Role: You are a Terraform Expert
@@ -76,8 +76,7 @@ jobs:
               - **Citations**: (At least two citations from multiple sources with links)
             ### Overall Summary:
             - Reference similar prior summaries where applicable; provide a new summary if the changes are distinct.
-          ignore_patterns: '**/*.md,docs/**,.github/**'
-          debug: false
+          ignore_patterns: "**/*.md,docs/**,.github/**"
+          debug: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
