--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Fetch all history for diff analysis
 
       - name: Assume AWS Role using OIDC
         uses: aws-actions/configure-aws-credentials@v4
