--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -1,9 +1,8 @@
 name: Bedrock Agent Review
 
 on:
-  pull_request:
-    branches: [main]
-    types: [opened, synchronize, reopened]
+  issue_comment:
+    types: [created]
 
 permissions:
   id-token: write
@@ -17,10 +16,12 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '@ai-agent') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: refs/pull/${{ github.event.issue.number }}/head
           fetch-depth: 0 # Fetch all history for diff analysis
 
       - name: Assume AWS Role using OIDC
