--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -16,7 +16,7 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '@ai-agent') }}
+    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '@scsk-ai-agent') }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
