--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -1,8 +1,10 @@
 name: Bedrock Agent Review
 
 on:
-  issue_comment:
+  pull_request_review_comment:
     types: [created]
+  pull_request_review:
+    types: [submitted]
 
 permissions:
   id-token: write
@@ -16,13 +18,12 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event.issue.pull_request }}
     steps:
-      - name: Checkout code
+      - name: Checkout code (from other review events)
         uses: actions/checkout@v4
         with:
-          ref: refs/pull/${{ github.event.issue.number }}/head
-          fetch-depth: 0 # Fetch all history for diff analysis
+          ref: refs/pull/${{ github.event.pull_request.number }}/head
+          fetch-depth: 0
 
       - name: Assume AWS Role using OIDC
         uses: aws-actions/configure-aws-credentials@v4
