fix: update issue comment trigger types to include edited comments

--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -2,7 +2,7 @@ name: Bedrock Agent Review
 
 on:
   issue_comment:
-    types: [created, deleted]
+    types: [created, edited, deleted]
 
 permissions:
   id-token: write
