--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -2,7 +2,7 @@ name: Bedrock Agent Review
 
 on:
   issue_comment:
-    types: [created, edited, deleted]
+    types: [created]
 
 permissions:
   id-token: write
@@ -17,12 +17,13 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    if: ${{ github.event.issue.pull_request }}
     steps:
-      - name: Checkout code (from other review events)
+      - name: Checkout PR head
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.issue.pull_request.head.ref }}
-          fetch-depth: 0
+          ref: refs/pull/${{ github.event.issue.number }}/head
+          fetch-depth: 0 # Fetch all history for diff analysis
 
       - name: Assume AWS Role using OIDC
         uses: aws-actions/configure-aws-credentials@v4
