--- a/.github/workflows/bedrock-agent-review.yml
+++ b/.github/workflows/bedrock-agent-review.yml
@@ -17,7 +17,7 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ github.event.issue.pull_request }}
+    if: ${{ github.event.issue.pull_request != null }}
     steps:
       - name: Checkout PR head
         uses: actions/checkout@v4
