--- a/.github/workflows/bedrock-issue-improve.yml
+++ b/.github/workflows/bedrock-issue-improve.yml
@@ -56,16 +56,19 @@ jobs:
               const { data: pr } = await github.rest.pulls.get({ owner, repo, pull_number: prNumber });
               const headRef = pr.head.ref;
               const headRepo = pr.head.repo.full_name;
+              const baseRef = pr.base.ref;
               const sameRepo = headRepo.toLowerCase() === `${owner}/${repo}`.toLowerCase();
               core.setOutput('pr_number', String(prNumber));
               core.setOutput('pr_head_ref', headRef);
               core.setOutput('pr_head_repo', headRepo);
+              core.setOutput('pr_base_ref', baseRef);
               core.setOutput('is_same_repo', String(sameRepo));
-              core.info(`Detected PR #${prNumber} head ${headRepo}:${headRef} (sameRepo=${sameRepo}).`);
+              core.info(`Detected PR #${prNumber} head ${headRepo}:${headRef} (base: ${baseRef}, sameRepo=${sameRepo}).`);
             } else {
               core.setOutput('pr_number', '');
               core.setOutput('pr_head_ref', '');
               core.setOutput('pr_head_repo', '');
+              core.setOutput('pr_base_ref', '');
               core.setOutput('is_same_repo', 'false');
               core.info('No PR detected in issue body; will use default branch.');
             }
@@ -121,6 +124,12 @@ jobs:
           debug: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # イベント偽装（当該アクションが issues を未対応のため）
+          # PRが検出できた場合のみ、pull_request 相当の環境を提供
+          GITHUB_EVENT_NAME: ${{ steps.prctx.outputs.pr_head_ref != '' && 'pull_request' || env.GITHUB_EVENT_NAME }}
+          GITHUB_REF: ${{ steps.prctx.outputs.pr_number != '' && format('refs/pull/{0}/head', steps.prctx.outputs.pr_number) || env.GITHUB_REF }}
+          GITHUB_HEAD_REF: ${{ steps.prctx.outputs.pr_head_ref }}
+          GITHUB_BASE_REF: ${{ steps.prctx.outputs.pr_base_ref }}
 
       - name: Commit and push changes (same repo PR)
         if: ${{ steps.prctx.outputs.pr_head_ref != '' && steps.prctx.outputs.is_same_repo == 'true' }}
