--- a/.github/workflows/bedrock-issue-improve.yml
+++ b/.github/workflows/bedrock-issue-improve.yml
@@ -30,13 +30,15 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Run Bedrock Improve
+      - name: Setup AWS CLI
+        uses: aws-actions/setup-aws-cli@v2
+
+      - name: Invoke Bedrock Agent via AWS CLI
         id: bedrock
-        uses: severity1/custom-amazon-bedrock-agent-action@v0.10.0
-        with:
-          agent_id: "HG3FHKX9GY"
-          agent_alias_id: "Y7IXOPEHZ2"
-          action_prompt: |
+        env:
+          AGENT_ID: "HG3FHKX9GY"
+          AGENT_ALIAS_ID: "Y7IXOPEHZ2"
+          PROMPT: |
             役割: あなたは司令塔（Coordinator）です。以下の2エージェントに改修依頼を出し、必要な変更をこのリポジトリの当該PRブランチに直接反映させてください。
             - 設計エージェント: アーキテクチャ/UX/アクセシビリティ/セキュリティ/パフォーマンス/依存/テスト観点から改善点を抽出し、改修方針と根拠を提示。
             - 実装エージェント: 具体的なコード変更（.js/.html）の実装、不要コード整理、バグ修正、パフォーマンス微調整、Lint/Format適用を担当。
@@ -57,25 +59,21 @@ jobs:
 
             ### 完了チェックリスト
             - Lint/ビルド/表示確認
-          debug: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # アクションが pull_request を期待する場合に備えた環境補正
-          GITHUB_EVENT_NAME: pull_request
-          GITHUB_REF: refs/pull/${{ github.event.pull_request.number }}/head
-          GITHUB_HEAD_REF: ${{ github.event.pull_request.head.ref }}
-          GITHUB_BASE_REF: ${{ github.event.pull_request.base.ref }}
-
-      - name: Commit and push changes (same repo only)
-        if: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-        env:
-          BRANCH: ${{ github.event.pull_request.head.ref }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          if ! git diff --quiet; then
-            git add -A
-            git commit -m "chore: apply improvements suggested by Bedrock (on review submit)"
-            git push origin "HEAD:${BRANCH}"
-          else
-            echo "No changes to commit."
+          chmod +x scripts/bedrock_invoke_agent.sh
+          scripts/bedrock_invoke_agent.sh
+
+      - name: Post improve summary as PR comment
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            const body = fs.readFileSync('bedrock_agent_text.txt', 'utf8');
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.pull_request.number,
+              body
+            });
+
