--- a/.github/workflows/bedrock-issue-improve.yml
+++ b/.github/workflows/bedrock-issue-improve.yml
@@ -24,14 +24,33 @@ jobs:
           fetch-depth: 0
 
       - name: Assume AWS Role using OIDC
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v5.0.0
         with:
           role-to-assume: arn:aws:iam::649844050696:role/isd1-lab-iamrole-github-actions-deploy
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
-      - name: Setup AWS CLI
-        uses: aws-actions/setup-aws-cli@v2
+      - name: Ensure AWS CLI v2 and jq
+        run: |
+          set -euo pipefail
+          if command -v aws >/dev/null 2>&1; then
+            echo "AWS CLI found: $(aws --version)"
+          else
+            echo "Installing AWS CLI v2..."
+            sudo apt-get update
+            sudo apt-get install -y unzip curl
+            curl -sSL "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+            unzip -q awscliv2.zip
+            sudo ./aws/install --update
+            aws --version
+          fi
+          if command -v jq >/dev/null 2>&1; then
+            echo "jq found: $(jq --version)"
+          else
+            echo "Installing jq..."
+            sudo apt-get update
+            sudo apt-get install -y jq
+          fi
 
       - name: Invoke Bedrock Agent via AWS CLI
         id: bedrock
@@ -76,4 +95,3 @@ jobs:
               issue_number: context.payload.pull_request.number,
               body
             });
-
