feat: add debug logging for Bedrock agent and model invocation

--- a/.github/workflows/bedrock-issue-improve.yml
+++ b/.github/workflows/bedrock-issue-improve.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Invoke Bedrock Agent via Python SDK
         id: bedrock
         env:
+          DEBUG_BEDROCK: "1"
           AGENT_ID: "HG3FHKX9GY"
           AGENT_ALIAS_ID: "Y7IXOPEHZ2"
           PROMPT: |
