--- a/.github/workflows/bedrock-issue-improve.yml
+++ b/.github/workflows/bedrock-issue-improve.yml
@@ -30,6 +30,13 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Check Python and Boto3 versions
+        run: |
+          python3 --version
+          pip3 list | grep boto
+          python3 -c "import boto3; print(f'Boto3 version: {boto3.__version__}')"
+          python3 -c "import botocore; print(f'Botocore version: {botocore.__version__}')"
+
       - name: Invoke Bedrock Agent via Python SDK
         id: bedrock
         env:
@@ -59,7 +66,7 @@ jobs:
             - Lint/ビルド/表示確認
         run: |
           set -euo pipefail
-          python scripts/bedrock_invoke_agent.py
+          python3 scripts/bedrock_invoke_agent.py
 
       - name: Post improve summary as PR comment
         uses: actions/github-script@v7
