--- a/.github/workflows/bedrock-pr-plan.yml
+++ b/.github/workflows/bedrock-pr-plan.yml
@@ -19,7 +19,18 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     if: >
-      ${{ github.event_name == 'pull_request_review' || (github.event_name == 'issue_comment' && github.event.issue.pull_request && contains(github.event.comment.body, '/plan')) }}
+      ${{
+        github.event_name == 'pull_request_review' ||
+        (
+          github.event_name == 'issue_comment' &&
+          github.event.issue.pull_request &&
+          (
+            startsWith(github.event.comment.body, '/plan') ||
+            startsWith(github.event.comment.body, '/PLAN')
+          ) &&
+          !contains(github.event.comment.body, '/apply')
+        )
+      }}
     steps:
       - name: Resolve PR context
         id: prctx
