--- a/.github/workflows/bedrock-pr-apply.yml
+++ b/.github/workflows/bedrock-pr-apply.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   apply:
-    if: ${{ github.event.issue.pull_request && contains(github.event.comment.body, '/apply') }}
+    if: ${{ github.event.issue.pull_request && startsWith(github.event.comment.body, '/apply') }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
