--- a/.github/workflows/bedrock-pr-apply.yml
+++ b/.github/workflows/bedrock-pr-apply.yml
@@ -115,6 +115,14 @@ jobs:
 
           echo "PROMPT_FILE=$OUT" >> "$GITHUB_ENV"
 
+      - name: Upload apply prompt artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pr-apply-prompt-${{ steps.ctx.outputs.number }}
+          path: scripts/prompts/_runtime_pr_apply.md
+          if-no-files-found: error
+          retention-days: 7
+
       - name: Locate latest plan-meta
         id: plan
         uses: actions/github-script@v7
