--- a/.github/workflows/bedrock-pr-plan.yml
+++ b/.github/workflows/bedrock-pr-plan.yml
@@ -3,8 +3,6 @@ name: Bedrock PR Plan
 on:
   pull_request_review:
     types: [submitted]
-  issue_comment:
-    types: [created]
 
 permissions:
   id-token: write
@@ -17,7 +15,7 @@ env:
 jobs:
   plan:
     if: >
-      ${{ github.event_name == 'pull_request_review' || (github.event_name == 'issue_comment' && github.event.issue.pull_request && startsWith(github.event.comment.body, '/plan') ) }}
+      ${{ (github.event_name == 'pull_request_review' && startsWith(github.event.review.body, '/plan'))  }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
